# OptGridWalk

./: .README.md.swo  CMakeLists.txt  README.md
examples/: blocked_square.txt  divided_square.txt  hole_square.txt  large_blocked_square.txt  one_PDF_set.txt  one_biased_set.txt  optimize_10.txt  optimize_100.txt  shield.txt  simple_square.txt  simple_square_training_PDF_set_results.txt  spiral.txt  training_PDF_set.txt  tunnel.txt  two_PDF_set.txt  zero_PDF_set.txt
examples/nn_training_data/: blocked_square_large_PMF_set_results_filtered.csv  blocked_square_large_training_PMF_set_results.txt  blocked_square_testing_PMF_set_results.csv  blocked_square_testing_PMF_set_results.txt  blocked_square_testing_PMF_set_results_filtered.csv  blocked_square_training_PMF_set_results.csv  blocked_square_training_PMF_set_results.txt  blocked_square_training_PMF_set_results_filtered.csv  large_training_PMF_set.txt  testing_PMF_set.txt  training_PMF_set.txt
scripts/: generate_PMF_params.m
src/: grid.cpp  grid.hpp  main.cpp  mc_walk.cpp  mc_walk.hpp  node.hpp  walk_manager.cpp  walk_manager.hpp  walker.cpp  walker.hpp
src/grid_walk/: main.cpp  mc_walk.cpp  mc_walk.hpp  walk_manager.cpp  walk_manager.hpp  walker.cpp  walker.hpp
src/grid_walk/util/: dist.cpp  dist.hpp  grid.cpp  grid.hpp
src/util/: coord.cpp  coord.hpp  dist.cpp  dist.hpp  rand.hpp
src/walk_optimization/: gridwalkopt.cpp  testing_predictions.csv
